--- a/MyRefrigerator/build.gradle
+++ b/MyRefrigerator/build.gradle
@@ -22,38 +22,22 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect')
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     compileOnly 'org.projectlombok:lombok'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'mysql:mysql-connector-java'
-    runtimeOnly 'org.postgresql:postgresql'
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    developmentOnly('org.springframework.boot:spring-boot-devtools')
 }
-//
-//tasks.named('test') {
-//    useJUnitPlatform()
-//}
-//
-//tasks.named('bootBuildImage') {
-//    builder = 'paketobuildpacks/builder:tiny'
-//    environment = ['BP_NATIVE_IMAGE': 'true']
-//}
-//
-//tasks.named('hibernate') {
-//    enhance {
-//        enableLazyInitialization = true
-//        enableDirtyTracking = true
-//        enableAssociationManagement = true
-//        enableExtendedEnhancement = false
-//    }
-//}
