--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^6.5.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.5.0",
@@ -22,6 +23,7 @@
     "react-native": "0.70.1",
     "react-native-gesture-handler": "^2.6.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-paper": "^4.12.4",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
