--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^6.5.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.4.6",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
@@ -21,6 +22,7 @@
     "moment-with-locales-es6": "^1.0.1",
     "react": "18.1.0",
     "react-native": "0.70.1",
+    "react-native-date-picker": "^4.2.5",
     "react-native-gesture-handler": "^2.6.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal-datetime-picker": "^14.0.0",
@@ -28,7 +30,8 @@
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.17.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-wheel-pick": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -40,6 +43,7 @@
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.70.0",
     "@types/react-native-vector-icons": "^6.4.12",
+    "@types/react-native-wheel-pick": "^1.1.2",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
