--- a/MyRefrigerator/build.gradle
+++ b/MyRefrigerator/build.gradle
@@ -40,4 +40,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     developmentOnly('org.springframework.boot:spring-boot-devtools')
+
+    compileOnly('io.jsonwebtoken:jjwt-api:0.11.1')
+    runtimeOnly('io.jsonwebtoken:jjwt-impl:0.11.1', 'io.jsonwebtoken:jjwt-jackson:0.11.1')
+
+    implementation 'com.auth0:java-jwt:3.8.1'
 }
