--- a/MyRefrigerator/src/main/resources/application-oauth.yml
+++ b/MyRefrigerator/src/main/resources/application-oauth.yml
@@ -1,3 +1,45 @@
+#spring:
+#  security:
+#    oauth2:
+#      client:
+#        registration:
+#          google:
+#            client-id : 694195352545-ihh1prd6217dfa0jn8dqb37rep0gpk6t.apps.googleusercontent.com
+#            client-secret : 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
+#            scope : profile,email
+#
+#          naver:
+#            client-id : gQPlE40s9Y23btIrcSgJ
+#            client-secret : lTTh5XNiHL
+#            redirect-uri : "http://localhost:8080/login/oauth/naver"
+#            authorization-grant-type : authorization_code
+#            scope : name, email, profile_image
+#            client-name : Naver
+#
+#          kakao:
+#            client-id: 54ea261cae42b69128901f446f7ad6f8
+#            client-secret: vLxYmODCo61o3MiXNql5tmngcFWLv0vM
+#            redirect-uri: "http://localhost:8080/login/oauth/kakao"
+#            # http://localhost:8080/login/oauth2/code/kakao
+#            client-authentication-method: POST
+#            authorization-grant-type: authorization_code
+#            scope: profile_nickname, profile_image, account_email
+#            client-name: Kakao
+#
+#            # provider
+#        provider:
+#          naver:
+#            authorization-uri : https://nid.naver.com/oauth2.0/authorize
+#            token-uri : https://nid.naver.com/oauth2.0/token
+#            user-info-uri : https://openapi.naver.com/v1/nid/me
+#            user-name-attribute : response
+#
+#          kakao:
+#            authorization_uri: https://kauth.kakao.com/oauth/authorize
+#            token_uri: https://kauth.kakao.com/oauth/token
+#            user-info-uri: https://kapi.kakao.com/v2/user/me
+#            user_name_attribute: id
+
 spring:
   security:
     oauth2:
@@ -18,7 +60,6 @@ spring:
 
           kakao:
             client-id: 54ea261cae42b69128901f446f7ad6f8
-            client-secret: vLxYmODCo61o3MiXNql5tmngcFWLv0vM
             redirect-uri: "{baseUrl}/{action}/oauth2/code/{registrationId}"
             # http://localhost:8080/login/oauth2/code/kakao
             client-authentication-method: POST
@@ -39,3 +80,5 @@ spring:
             token_uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user_name_attribute: id
+
+
